# stable-ftp

./: .gitignore  Cargo.toml  build.rs
src/: db.rs  init.sql  lib.rs  logger.rs  structs.rs  structure.proto
src/client/: main.rs
src/server/: main.rs
