[package]
name = "stable-ftp"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["now", "clock"], default-features = false }
clap = { version = "4.5.*", features = ["derive"] }
indicatif = { version = "0.*", features = ["unicode-width"], default-features = false }
rusqlite = { version = "*", features = ["bundled"], default-features = false }
lazy_marshal = { path = "../lazy_marshal/lazy_marshal", features = ["derive"], default-features = false}

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

