[package]
name = "stable-ftp"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.*", features = [
    "now",
    "clock",
], default-features = false }
clap = { version = "4.*", features = ["derive"] }
indicatif = { version = "0.*", features = [
    "unicode-width",
], default-features = false }
rusqlite = { version = "0.*", features = ["bundled"], default-features = false }
lazy_marshal = { git = "https://github.com/ThatOneShortGuy/lazy_marshal", features = [
    "derive",
], default-features = false }
typed_db = { git = "https://github.com/ThatOneShortGuy/typed_db", version = "0.1.1" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
